# krypta

./: .env  .gitignore  Cargo.toml  Makefile  README.md  TODO.md  config.toml  test-mac.sh  test.sh
.github/workflows/: rust.yml
crypto/: Cargo.toml
crypto/src/: error.rs  lib.rs  traits.rs
crypto/src/bulk/: encryption.rs
crypto/src/concurrent/: mod.rs
crypto/src/crypt/: decryption.rs  encryption.rs  traits.rs
crypto/src/crypt/bulk/: decryption.rs  encryption.rs  mod.rs
crypto/src/crypt/single/: decryption.rs  encryption.rs  mod.rs
crypto/src/file/: decryption.rs  encryption.rs  mod.rs
crypto/src/file/bulk/: decryption.rs  encryption.rs
crypto/src/file/single/: decryption.rs  encryption.rs
crypto/src/hash/: mod.rs  sha256.rs  traits.rs  types.rs
crypto/src/hash/bulk/: mod.rs  sha256.rs
crypto/src/hash/single/: mod.rs  sha256.rs
crypto/src/single/: decryption.rs
crypto/src/types/: reports.rs
crypto/tests/: common.rs  concurrent_hashes.rs  single_encrypt.rs  single_hash.rs
fs/: Cargo.toml
fs/src/: errors.rs  lib.rs  metadata.rs  path_finder.rs
fs/tests/: common.rs  metadata.rs  path_finder.rs
fs/tests/common/: mod.rs
metadata-fs/: Cargo.toml
metadata-fs/src/: lib.rs  metadata.rs  path_finder.rs
metadata-fs/tests/: metadata.rs  mod.rs  path_finder.rs
src/: cli.rs  config.rs  main.rs  schema.sql  storage.rs  sync.rs  tui.rs  utils.rs
src/actions/: sync.rs
src/cli/: Cargo.toml
src/cli/src/: lib.rs
src/commands/: execute.rs  mod.rs  status.rs  sync.rs
src/crypto/: Cargo.toml  Makefile
src/crypto/src/: errors.rs  lib.rs  traits.rs
src/crypto/src/crypt/: decrypt.rs  decryption.rs  encrypt.rs  encryption.rs  key.rs  mod.rs
src/crypto/src/hash/: blake3.rs  mod.rs  sha256.rs
src/crypto/src/types/: mod.rs
src/crypto/tests/: blake3_bulk.rs  blake3_unit.rs  common.rs  concurrent_hashes.rs  crypto_unit.rs  single_encrypt.rs  single_hash.rs
src/crypto/tests/common/: mod.rs
src/database/: Cargo.toml  api.rs  bigint_as_blob.rs  mod.rs  schema.sql
src/database/database-macros/: Cargo.toml
src/database/database-macros/src/: lib.rs
src/database/models/: file.rs  mod.rs  tag.rs  traits.rs
src/database/models/sql/: find_file_paths.sql  insert_file.sql  query_file.sql
src/database/models/sql/file/: archive_size.sql  fetch_all.sql  insert.sql  search.sql
src/database/src/: api.rs  errors.rs  lib.rs  traits.rs  utils.rs
src/database/src/models/: device.rs  device_config.rs  file.rs  file_device.rs  file_search.rs  file_tag.rs  key.rs  mod.rs  tag.rs  traits.rs  vault_info.rs
src/database/src/models/sql/device/: insert.sql  search.sql
src/database/src/models/sql/device_config/: count.sql  create_empty.sql  find_by_device.sql  find_or_create_current.sql  update.sql
src/database/src/models/sql/file/: count.sql  count_locked.sql  count_unlocked.sql  fetch_all.sql  find_file_from_path.sql  find_known_paths_with_last_modified.sql  find_paths_local.sql  get.sql  insert.sql  need_encryption.sql  search.sql  size.sql  tags.sql  update.sql
src/database/src/models/sql/file_device/: find_by_file.sql  find_by_path.sql  insert.sql  update.sql
src/database/src/models/sql/key/: create.sql  find.sql
src/fs/: Cargo.toml
src/fs/src/: errors.rs  lib.rs  path_finder.rs  tree.rs
src/fs/tests/: path_finder.rs
src/gui/: Cargo.toml
src/gui/src/: example.rs  lib.rs  traits.rs
src/krypta-impl/: Cargo.toml
src/krypta-impl/src/: lib.rs
src/krypta-impl/src/actions/: database_sync.rs  locked_sync.rs  mod.rs  sync.rs
src/krypta-impl/src/commands/: add.rs  check.rs  config.rs  debug.rs  encrypt.rs  execute.rs  find.rs  force_sync.rs  init.rs  list.rs  mod.rs  prune.rs  status.rs  sync.rs  tree.rs  unlock_structure.rs
src/krypta-impl/src/utils/: config.rs  database_sync.rs  mod.rs
src/storage/: authenticate.rs  mod.rs
src/temp-path/src/: lib.rs
src/tmp/: Cargo.toml
src/tmp/src/: lib.rs
src/tmp/tests/: tmp.rs
src/utils/: Cargo.toml  mod.rs  path.rs  path_finder.rs  path_info.rs
src/utils/src/: lib.rs
src/vault-impl/: Cargo.toml
src/vault-impl/src/: lib.rs
src/vault-impl/src/actions/: sync.rs
src/vault-impl/src/commands/: execute.rs  status.rs  sync.rs
src/vault-manager-impl/: Cargo.toml
src/vault-manager-impl/src/: lib.rs  schema.sql
src/vault-manager-impl/src/actions/: sync.rs
src/vault-manager-impl/src/commands/: execute.rs  init.rs  status.rs  sync.rs
src/vault-manager-impl/src/database/: api.rs  mod.rs
src/vault-manager-impl/src/database/models/: device.rs  file.rs  mod.rs  tag.rs  traits.rs  vault_info.rs
src/vault-manager-impl/src/database/models/sql/device/: search.sql
src/vault-manager-impl/src/database/models/sql/file/: count.sql  fetch_all.sql  find_paths.sql  insert.sql  search.sql
src/vfs/: Cargo.toml
src/vfs/src/: lib.rs
src/xtask/: Cargo.toml
src/xtask/src/: main.rs
temp-path/: Cargo.toml
