[package]
name = "vault"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "src/vault-impl",
    "src/crypto",
    "src/fs",
    "src/tmp",
    "src/cli",
    "src/database"
]

[dependencies]
vault-impl = { version = "0.1.0", path = "src/vault-impl" }
tokio = { version = "1", features = [ "macros" ] }
