[package]
name = "krypta"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "src/krypta-impl",
    "src/crypto",
    "src/fs",
    "src/tmp",
    "src/cli",
    "src/database"
]

[dependencies]
krypta-impl = { version = "0.1.0", path = "src/krypta-impl" }
tokio = { version = "1", features = [ "macros" ] }
