[package]
name = "krypta"
version = "0.0.0"
edition = "2021"

[workspace]
members = [
    "src/xtask",
    "src/krypta-impl",
    "src/crypto",
    "src/fs",
    "src/tmp",
    "src/cli",
    "src/database",
    "src/utils",
    "src/gui",
]

[dependencies]
krypta-impl = { version = "0.0.0", path = "src/krypta-impl" }
