[package]
name = "crypto"
description = "Handle concurrent file encryption and decryption using libsodium"
version = "0.1.0"
edition = "2018"

[dependencies]
sodiumoxide = "0.2"
tokio = { version = "1", features = [ "fs", "io-util", "macros", "sync", "rt", "rt-multi-thread" ] }
bytes = "1"
num_cpus = "1.13"

[dev-dependencies]
file_diff = "1"
rand = "0.8"
