[package]
name = "crypto"
description = "Handle concurrent file encryption, decryption and hashing"
version = "0.1.0"
edition = "2021"

[dependencies]
sodiumoxide = "0.2"

rand = { version = "0.8.4" }
rand_chacha = { version = "0.3.1" }

# crossbeam = "0.8.1"

rayon = "1.5"
parking_lot = "0.11"
memmap = "0.7.0"
blake3 = { version = "1.3.0", features = [ "rayon" ] }

bytes = "1"
num_cpus = "1.13"
thiserror = "1.0"

[dev-dependencies]
file_diff = "1"
rand = { version = "0.8", features = ["small_rng"] }
tmp = { version = "0.1.0", path = "../tmp" }
