[package]
name = "crypto"
description = "Handle concurrent file encryption, decryption and hashing"
version = "0.0.0"
edition = "2021"

[dependencies]
chacha20poly1305 = { version = "0.9.0", features = [ "stream" ] }

rand = { version = "0.8.4" }
rand_chacha = { version = "0.3.1" }

rayon = "1.5"
memmap2 = "0.5.2"
blake3 = { version = "1.3.0" }

thiserror = "1.0"
log = "0.4"

[dev-dependencies]
file_diff = "1"
rand = { version = "0.8", features = [ "small_rng" ] }
tmp = { version = "0.0.0", path = "../tmp" }
