[package]
name = "database"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = [ "macros", "rt" ] }
sqlx = { version = "0.5", features = [ "sqlite", "runtime-tokio-rustls", "chrono" ] }

chrono = "0.4"

log = "0.4"

rand = "0.8"

async-trait = "0.1"
byteorder = "1"
thiserror = "1.0"
