[package]
name = "database"
version = "0.1.0"
edition = "2021"

[dependencies.rusqlite]
version = "0.26"
features = [ "bundled", "chrono" ]

[dependencies]
crypto = { version = "0.1.0", path = "../crypto" }
chrono = "0.4"
log = "0.4"
rand = "0.8"
thiserror = "1.0"

[dev-dependencies]
tmp = { version = "0.1.0", path = "../tmp" }
