[package]
name = "database"
version = "0.0.0"
edition = "2021"

[dependencies]
rusqlite = { version = "0.28", features = [ "chrono", "bundled" ] }
crypto = { version = "0.0.0", path = "../crypto" }
utils = { version = "0.0.0", path = "../utils" }
chrono = "0.4"
log = "0.4"
rand = "0.8"
rand_chacha = "0.3"
thiserror = "1.0"
database-macros = { path = "database-macros" }
serde_json = "1.0"
uuid = { version = "1.1.2", features = [ "v5" ] }

[dev-dependencies]
tmp = { version = "0.0.0", path = "../tmp" }
