[package]
name = "fs"
description = "Find paths in fs and compute their metadata"
version = "0.0.0"
edition = "2021"

[dependencies]
tmp = { version = "0.0.0", path = "../tmp" }

tokio = { version = "1", features = [ "fs", "sync", "rt", "macros" ] }
walkdir = "2"
chrono = "0.4"
thiserror = "1.0"

[dev-dependencies]
rand = "0.8"
