[package]
name = "krypta-impl"
version = "0.1.0"
edition = "2021"

[dependencies]
fs = { version = "0.1.0", path = "../fs" }
crypto = { version = "0.1.0", path = "../crypto" }
cli = { version = "0.1.0", path = "../cli" }
database = { version = "0.1.0", path = "../database" }

tokio = { version = "1", features = [ "macros", "rt" ] }

log = "0.4"
dotenv = "0.15"
pretty_env_logger = "0.4"

byte-unit = "4"
anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]
tmp = { version = "0.1.0", path = "../tmp" }
