[package]
name = "krypta-impl"
version = "0.0.0"
edition = "2021"

[dependencies]
fs = { version = "0.0.0", path = "../fs" }
crypto = { version = "0.0.0", path = "../crypto" }
cli = { version = "0.0.0", path = "../cli" }
database = { version = "0.0.0", path = "../database" }
vfs = { version = "0.0.0", path = "../vfs" }

tokio = { version = "1", features = [ "macros", "rt", "rt-multi-thread" ] }

log = "0.4"
dotenv = "0.15"
pretty_env_logger = "0.4"

byte-unit = "4"
anyhow = "1.0"
thiserror = "1.0"

serde = { version = "1.0", features = [ "derive" ] }
toml = "0.7"

once_cell = "1.17"

[dev-dependencies]
tmp = { version = "0.0.0", path = "../tmp" }
tokio = { version = "1", features = [ "time" ] }
rand = "0.8"
